# pexshell

./: .gitignore  Cargo.toml  EXAMPLES.md  LICENSE  Makefile  NOTICE  README.md  about.hbs  about.toml  deny.toml  licenses.html
.github/: CODEOWNERS
.github/actions/prepare/: action.yml
.github/actions/upload-artifact/: action.yml
.github/workflows/: build.yml  check.yml  ci.yml  dependencies.yml  test.yml
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  test_util.rs
lib/src/mcu/: auth.rs  error.rs  mod.rs  schema.rs
lib/src/mcu/auth/: basic.rs  oauth2.rs
lib/src/test_util/: googletest.rs
lib/src/util/: future.rs  logging.rs  mod.rs  sensitive_string.rs  stream.rs  tracing.rs
src/: config.rs  consts.rs  main.rs  pexshell.rs  test_util.rs
src/argparse/: cache.rs  completions.rs  login.rs  mod.rs
src/cli/: login.rs  mod.rs
src/end_to_end_tests/: cache.rs  configuration_helpers.rs  delete.rs  get.rs  get_all.rs  mod.rs  patch.rs  post.rs
test_helpers/: Cargo.toml
test_helpers/src/: future.rs  googletest.rs  lib.rs
test_helpers/src/fs/: cache.rs  config.rs  mod.rs
test_helpers/src/logging/: expect.rs  mod.rs
test_helpers/tests/: logging.rs
