[workspace]
members = ["lib", "test_helpers"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "BSD-3-Clause"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = [
    "std",
    "clock",
    "serde",
], default-features = false } # for timestamps
console = "0.16.1" # colour stderr logging
futures = { version = "0.3.31", features = ["executor"] }
googletest = "0.14.2"
hyper = "1.8.1"
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
log = { version = "0.4.29", features = ["std", "serde"] }
parking_lot = "0.12.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"
tokio = "1.48"
toml = "0.9.8"
url = { version = "2.5", features = ["serde"] }

# dev & test dependencies
http = "1.4"
mockall = "0.14.0"
test-case = "3.3"
uuid = { version = "1.19", features = ["v4"] }
wiremock = "0.6.4"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unnecessary_debug_formatting = "allow"


[package]
name = "pexshell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
autotests = false
autobins = false

[[bin]]
name = "pexshell"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["wrap_help", "string"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
colored_json = "5.0.0"
console.workspace = true
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
directories = "6.0"
fslock = "0.2.1"
futures.workspace = true
git-version = "0.3.9"
is-terminal = "0.4.17" # for determining if stdout is a terminal (interactive)
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
    "vendored",
] }
lib = { package = "pex_lib", path = "lib", version = "0.1.0" }
log = { workspace = true, features = [
    # "max_level_trace",
    # "release_max_level_info", # may be useful for limiting logging in release builds, if we decide we want to do that
] }
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "io-std"] }
toml.workspace = true

[target.'cfg(unix)'.dependencies]
simple-signal = "1.1"

[dev-dependencies]
assert-panic = "1.0"
googletest.workspace = true
jsonwebtoken.workspace = true
lib = { package = "pex_lib", path = "lib", version = "0.1.0", features = [
    "test_util",
] }
mockall.workspace = true
test-case.workspace = true
test_helpers = { path = "test_helpers" }
url.workspace = true
uuid.workspace = true
wiremock.workspace = true

[features]
default = ["rustls-native-certs"]
all_logs = ["lib/all_logs"]
ci = ["test_helpers/ci"]
rustls-native-certs = ["reqwest/rustls-tls-native-roots"]
rustls = ["reqwest/rustls-tls"]

[lints]
workspace = true
