[package]
name = "pex_lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
license = "BSD-3-Clause"

[lib]
name = "pexlib"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
console.workspace = true
futures.workspace = true
hyper.workspace = true
log.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0"
tokio = { workspace = true, features = ["fs"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]
derive_more = "0.99.17"
httptest.workspace = true
test-case.workspace = true
test_helpers = { path = "../test_helpers" }
uuid.workspace = true

[features]
all_logs = []
