[package]
name = "pex_lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "pexlib"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
console.workspace = true
futures.workspace = true
googletest = { workspace = true, optional = true }
hex = "0.4.3"
hyper.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0"
tokio = { workspace = true, features = ["fs"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
derive_more = { version = "2.0.1", features = ["display", "error"] }
googletest.workspace = true
test-case.workspace = true
test_helpers = { path = "../test_helpers" }
uuid.workspace = true
tokio = { workspace = true, features = ["full"] }
wiremock.workspace = true

[features]
all_logs = []
test_util = ["dep:googletest"]

[lints]
workspace = true
