[package]
name = "test_helpers"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "BSD-3-Clause"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono.workspace = true
console.workspace = true
http.workspace = true
httptest.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking", "rustls"] }
test-case.workspace = true

[features]
ci = []
