[package]
name = "test_helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono.workspace = true
console.workspace = true
http.workspace = true
httptest.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking", "rustls"] }
test-case.workspace = true

[features]
ci = []
